<resources>
    <string name="app_name">FireFighter Support App</string>
    <string name="pair">Rota</string>
    <string name="enter">Wejście</string>
    <string name="check">Pomiar</string>
    <string name="textview">TextView</string>
    <string name="hint">BAR</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="i_am_here">Tu jesteś</string>
    <string name="provider_failed">Brak dostępu</string>
    <string name="starting_time">"00:00:00"</string>
    <string name="start">START</string>
    <string name="count">Oblicz</string>
    <string name="finish">Zakończ</string>
    <string name="remaining_time_text">Pozostały czas: </string>
    <string name="remaining_time_on_start">30m 00s</string>
    <string name="goto_db">BAZA STRAŻAKÓW</string>
    <string name="name">IMIĘ</string>
    <string name="surname">NAZWISKO</string>
    <string name="nick">PSEUDONIM</string>
</resources>