<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fa6e6e">

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="378dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/name"
                android:textSize="22sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="234dp"
                android:layout_height="match_parent"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/surname"
                android:textSize="22sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/et_surname"
                android:layout_width="167dp"
                android:layout_height="match_parent"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/nick"
                android:textSize="22sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/et_nick"
                android:layout_width="153dp"
                android:layout_height="match_parent"
                android:inputType="text" />

        </LinearLayout>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="OK" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>